{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 109,
  "lineage": "d2a43ed6-4752-2c0d-acc2-2f13f8b53ac9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "liberdade_tgw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:sa-east-1:420228061920:transit-gateway/tgw-0ba46950aee4956a2",
            "association_default_route_table_id": "tgw-rtb-0fddcd9b16033f915",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "liberdade-tgw01 (Sao Paulo spoke)",
            "dns_support": "enable",
            "id": "tgw-0ba46950aee4956a2",
            "multicast_support": "disable",
            "owner_id": "420228061920",
            "propagation_default_route_table_id": "tgw-rtb-0fddcd9b16033f915",
            "security_group_referencing_support": "disable",
            "tags": {
              "Name": "liberdade-tgw01"
            },
            "tags_all": {
              "Name": "liberdade-tgw01"
            },
            "vpn_ecmp_support": "enable"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment",
      "name": "liberdade_to_shinjuku_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:transit-gateway-attachment/tgw-attach-05cc331c9a7835b14",
            "id": "tgw-attach-05cc331c9a7835b14",
            "peer_account_id": "420228061920",
            "peer_region": "ap-northeast-1",
            "peer_transit_gateway_id": "tgw-04fcb36a59fc568fb",
            "state": "pendingAcceptance",
            "tags": {
              "Name": "liberdade-to-shinjuku-peer"
            },
            "tags_all": {
              "Name": "liberdade-to-shinjuku-peer"
            },
            "transit_gateway_id": "tgw-0ba46950aee4956a2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "data.terraform_remote_state.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_peering_attachment_accepter",
      "name": "shinjuku_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tgw-attach-05cc331c9a7835b14",
            "peer_account_id": "420228061920",
            "peer_region": "sa-east-1",
            "peer_transit_gateway_id": "tgw-0ba46950aee4956a2",
            "tags": {
              "Name": "shinjuku-accepter-for-brazil"
            },
            "tags_all": {
              "Name": "shinjuku-accepter-for-brazil"
            },
            "transit_gateway_attachment_id": "tgw-attach-05cc331c9a7835b14",
            "transit_gateway_id": "tgw-04fcb36a59fc568fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.liberdade_to_shinjuku_peer",
            "data.terraform_remote_state.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "liberdade_to_tokyo_tgw_static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": false,
            "destination_cidr_block": "10.101.0.0/16",
            "id": "tgw-rtb-0fddcd9b16033f915_10.101.0.0/16",
            "transit_gateway_attachment_id": "tgw-attach-05cc331c9a7835b14",
            "transit_gateway_route_table_id": "tgw-rtb-0fddcd9b16033f915"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_ec2_transit_gateway_peering_attachment.liberdade_to_shinjuku_peer",
            "aws_ec2_transit_gateway_peering_attachment_accepter.shinjuku_accepter",
            "data.terraform_remote_state.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "liberdade_attach_sp_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "arn": "arn:aws:ec2:sa-east-1:420228061920:transit-gateway-attachment/tgw-attach-0059b01da16892482",
            "dns_support": "enable",
            "id": "tgw-attach-0059b01da16892482",
            "ipv6_support": "disable",
            "security_group_referencing_support": "enable",
            "subnet_ids": [
              "subnet-01e34a52af32c2947",
              "subnet-052b9a7668beeb153"
            ],
            "tags": {
              "Name": "liberdade-attach-sp-vpc01"
            },
            "tags_all": {
              "Name": "liberdade-attach-sp-vpc01"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0ba46950aee4956a2",
            "vpc_id": "vpc-0ed9adce14f27ae7a",
            "vpc_owner_id": "420228061920"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_subnet.liberdade_private_subnet01",
            "aws_subnet.liberdade_private_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "liberdade_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f71733d5b6b6344",
            "arn": "arn:aws:ec2:sa-east-1:420228061920:elastic-ip/eipalloc-05f71733d5b6b6344",
            "domain": "vpc",
            "id": "eipalloc-05f71733d5b6b6344",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-56-126-142-170.sa-east-1.compute.amazonaws.com",
            "public_ip": "56.126.142.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liberdade_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:internet-gateway/igw-06796a47a0fbe31f8",
            "id": "igw-06796a47a0fbe31f8",
            "owner_id": "420228061920",
            "tags": {
              "Name": "liberdade-gateway"
            },
            "tags_all": {
              "Name": "liberdade-gateway"
            },
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "liberdade_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:loadbalancer/app/liberdade-alb/d1cdc4cf53f585cd",
            "arn_suffix": "app/liberdade-alb/d1cdc4cf53f585cd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "liberdade-alb-2075462711.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:loadbalancer/app/liberdade-alb/d1cdc4cf53f585cd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "liberdade-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0af3bfd1b21754479"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01da47716e81adcf6"
              },
              {
                "subnet_id": "subnet-05f9fe38b505e401c"
              }
            ],
            "subnets": [
              "subnet-01da47716e81adcf6",
              "subnet-05f9fe38b505e401c"
            ],
            "vpc_id": "vpc-0ed9adce14f27ae7a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.liberdade_alb_sg",
            "aws_subnet.liberdade_public_subnet01",
            "aws_subnet.liberdade_public_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "liberdade_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:listener/app/liberdade-alb/d1cdc4cf53f585cd/d92085523b5399aa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Access Denied: Use the Global Edge Entry Point.",
                    "status_code": "403"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:listener/app/liberdade-alb/d1cdc4cf53f585cd/d92085523b5399aa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:loadbalancer/app/liberdade-alb/d1cdc4cf53f585cd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.liberdade_alb",
            "aws_security_group.liberdade_alb_sg",
            "aws_subnet.liberdade_public_subnet01",
            "aws_subnet.liberdade_public_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "liberdade_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:targetgroup/liberdade-tg/6bee375f2b791051",
            "arn_suffix": "targetgroup/liberdade-tg/6bee375f2b791051",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/records/save/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:420228061920:targetgroup/liberdade-tg/6bee375f2b791051",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "liberdade-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "liberdade_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f71733d5b6b6344",
            "association_id": "eipassoc-0edcbf6e5032cf7f7",
            "connectivity_type": "public",
            "id": "nat-01c40d80df732a94d",
            "network_interface_id": "eni-02ab23f57b06676fd",
            "private_ip": "10.102.10.44",
            "public_ip": "56.126.142.170",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f9fe38b505e401c",
            "tags": {
              "Name": "liberdade-nat"
            },
            "tags_all": {
              "Name": "liberdade-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.liberdade_nat_eip",
            "aws_internet_gateway.liberdade_gateway",
            "aws_subnet.liberdade_public_subnet01",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdade_private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0407d64fdbd6d79111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01c40d80df732a94d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0407d64fdbd6d7911",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.liberdade_nat_eip",
            "aws_internet_gateway.liberdade_gateway",
            "aws_nat_gateway.liberdade_nat",
            "aws_route_table.liberdade_private_rt01",
            "aws_subnet.liberdade_public_subnet01",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdade_public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06796a47a0fbe31f8",
            "id": "r-rtb-0a7745b62393bdbae1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a7745b62393bdbae",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.liberdade_gateway",
            "aws_route_table.liberdade_public_rt",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "liberdade_to_tokyo_route01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.101.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0407d64fdbd6d79113672843668",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0407d64fdbd6d7911",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0ba46950aee4956a2",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ec2_transit_gateway.liberdade_tgw01",
            "aws_route_table.liberdade_private_rt01",
            "aws_vpc.liberdade_vpc01",
            "data.terraform_remote_state.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liberdade_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:route-table/rtb-0407d64fdbd6d7911",
            "id": "rtb-0407d64fdbd6d7911",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "liberdade-private-rt"
            },
            "tags_all": {
              "Name": "liberdade-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "liberdade_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:route-table/rtb-0a7745b62393bdbae",
            "id": "rtb-0a7745b62393bdbae",
            "owner_id": "420228061920",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "liberdade-public-rt"
            },
            "tags_all": {
              "Name": "liberdade-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdade_priv_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fecd07d9e9bfafb2",
            "route_table_id": "rtb-0407d64fdbd6d7911",
            "subnet_id": "subnet-052b9a7668beeb153"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdade_private_rt01",
            "aws_subnet.liberdade_private_subnet01",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdade_priv_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1006eca271a705c",
            "route_table_id": "rtb-0407d64fdbd6d7911",
            "subnet_id": "subnet-01e34a52af32c2947"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdade_private_rt01",
            "aws_subnet.liberdade_private_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdade_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073a44f7012f66aac",
            "route_table_id": "rtb-0a7745b62393bdbae",
            "subnet_id": "subnet-05f9fe38b505e401c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdade_public_rt",
            "aws_subnet.liberdade_public_subnet01",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "liberdade_public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0610419a5e0246090",
            "route_table_id": "rtb-0a7745b62393bdbae",
            "subnet_id": "subnet-01da47716e81adcf6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.liberdade_public_rt",
            "aws_subnet.liberdade_public_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberdade_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:security-group/sg-0af3bfd1b21754479",
            "description": "Allow HTTP inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af3bfd1b21754479",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "liberdade-alb-sg",
            "name_prefix": "",
            "owner_id": "420228061920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "liberdade_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:security-group/sg-059ad5fc2be53c279",
            "description": "Security group for stateless compute in Sao Paulo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059ad5fc2be53c279",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af3bfd1b21754479"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "liberdade-ec2-sg",
            "name_prefix": "",
            "owner_id": "420228061920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.liberdade_alb_sg",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:security-group/sg-0994421ca0bf96c0f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0994421ca0bf96c0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.102.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20260307125009178700000001",
            "name_prefix": "terraform-",
            "owner_id": "420228061920",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdade_private_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:subnet/subnet-052b9a7668beeb153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.102.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052b9a7668beeb153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "liberdade-private-1a"
            },
            "tags_all": {
              "Name": "liberdade-private-1a"
            },
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdade_private_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:subnet/subnet-01e34a52af32c2947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.102.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e34a52af32c2947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "liberdade-private-1c"
            },
            "tags_all": {
              "Name": "liberdade-private-1c"
            },
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdade_public_subnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:subnet/subnet-05f9fe38b505e401c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.102.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f9fe38b505e401c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "liberdade-public-1a"
            },
            "tags_all": {
              "Name": "liberdade-public-1a"
            },
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liberdade_public_subnet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:subnet/subnet-01da47716e81adcf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "10.102.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01da47716e81adcf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "420228061920",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "liberdade-public-1c"
            },
            "tags_all": {
              "Name": "liberdade-public-1c"
            },
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liberdade_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:vpc/vpc-0ed9adce14f27ae7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.102.0.0/16",
            "default_network_acl_id": "acl-03eb96976e15a2a2e",
            "default_route_table_id": "rtb-0160bfff16040cd00",
            "default_security_group_id": "sg-0e999b235d5efda59",
            "dhcp_options_id": "dopt-057ff6a4ff6b19b46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed9adce14f27ae7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0160bfff16040cd00",
            "owner_id": "420228061920",
            "tags": {
              "Name": "liberdade-vpc-sp"
            },
            "tags_all": {
              "Name": "liberdade-vpc-sp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:vpc-endpoint/vpce-08080d7fb9941ab56",
            "dns_entry": [
              {
                "dns_name": "vpce-08080d7fb9941ab56-rl4kgxxu.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-08080d7fb9941ab56-rl4kgxxu-sa-east-1a.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-08080d7fb9941ab56-rl4kgxxu-sa-east-1c.ec2messages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ec2messages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0885943MY89PD7WTI2V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08080d7fb9941ab56",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0618f279dc66f25f6",
              "eni-0fd2f446338c3c7d2"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0994421ca0bf96c0f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ec2messages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.102.1.164",
                "subnet_id": "subnet-052b9a7668beeb153"
              },
              {
                "ipv4": "10.102.2.206",
                "subnet_id": "subnet-01e34a52af32c2947"
              }
            ],
            "subnet_ids": [
              "subnet-01e34a52af32c2947",
              "subnet-052b9a7668beeb153"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_endpoint_sg",
            "aws_subnet.liberdade_private_subnet01",
            "aws_subnet.liberdade_private_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:vpc-endpoint/vpce-03d32a26a95ca6ef9",
            "dns_entry": [
              {
                "dns_name": "vpce-03d32a26a95ca6ef9-er9a9lei.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-03d32a26a95ca6ef9-er9a9lei-sa-east-1a.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-03d32a26a95ca6ef9-er9a9lei-sa-east-1c.ssm.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssm.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z08859378QGX0W49J3O5"
              },
              {
                "dns_name": "ssm-facade.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z08859361C70QXYUKU7WF"
              },
              {
                "dns_name": "ssm.sa-east-1.api.aws",
                "hosted_zone_id": "Z026883639A2Z31ZMAXN8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03d32a26a95ca6ef9",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04d3cd4ee91b9da1b",
              "eni-073d1cc5637b2fd7c"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0994421ca0bf96c0f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssm",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.102.1.8",
                "subnet_id": "subnet-052b9a7668beeb153"
              },
              {
                "ipv4": "10.102.2.209",
                "subnet_id": "subnet-01e34a52af32c2947"
              }
            ],
            "subnet_ids": [
              "subnet-01e34a52af32c2947",
              "subnet-052b9a7668beeb153"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_endpoint_sg",
            "aws_subnet.liberdade_private_subnet01",
            "aws_subnet.liberdade_private_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:420228061920:vpc-endpoint/vpce-0a22edab36b2cb644",
            "dns_entry": [
              {
                "dns_name": "vpce-0a22edab36b2cb644-u2dlipzc.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0a22edab36b2cb644-u2dlipzc-sa-east-1c.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "vpce-0a22edab36b2cb644-u2dlipzc-sa-east-1a.ssmmessages.sa-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2LXUWEVLCVZIB"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.amazonaws.com",
                "hosted_zone_id": "Z0177878179SWH4QPJP1C"
              },
              {
                "dns_name": "ssmmessages.sa-east-1.api.aws",
                "hosted_zone_id": "Z0178200KIZFFU3DGNZ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a22edab36b2cb644",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0086278b9d59a7ae2",
              "eni-050050845f86e8664"
            ],
            "owner_id": "420228061920",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0994421ca0bf96c0f"
            ],
            "service_name": "com.amazonaws.sa-east-1.ssmmessages",
            "service_region": "sa-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.102.1.55",
                "subnet_id": "subnet-052b9a7668beeb153"
              },
              {
                "ipv4": "10.102.2.58",
                "subnet_id": "subnet-01e34a52af32c2947"
              }
            ],
            "subnet_ids": [
              "subnet-01e34a52af32c2947",
              "subnet-052b9a7668beeb153"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ed9adce14f27ae7a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssm_endpoint_sg",
            "aws_subnet.liberdade_private_subnet01",
            "aws_subnet.liberdade_private_subnet02",
            "aws_vpc.liberdade_vpc01"
          ]
        }
      ]
    }
  ]
}